--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
     <body style="background-color: #e1dffb;">
         <nav class="navbar navbar-expand-lg navbar-dark shadow-sm" style="background-color: #0b115a;">
             <div class="container d-flex bd-highlight">
-              <a class="navbar-brand" href="index.html">My App</a>
+              <a class="navbar-brand" href="index.html">Aplikasi Data Pegawai</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
